<resources>
    <string name="app_name">&appname_driver;</string>
    <string name="package_rider" translatable="false">"com.trioangle.gofer"</string>
    <string name="package_driver" translatable="false">"com.trioangle.goferdriver"</string>
    <string name="google_maps_key" translatable="false">AIzaSyB0efJyL4VKIbR2rTcugSC_z-m3z06hjEk</string>
    <string name="FACEBOOK_APP_ID" translatable="false">771151139928765</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">f27861f3cbbbedffa8dddb687026eb34</string>
    <string name="hide">Hide</string>
    <string name="rider">Rider</string>
    <string name="emailalreadyexits">"You already have an account with this email. \nTry logging in, instead."</string>
    <string name="invalidelogin">Invalid Login details  </string>
    <string name="signin">"SIGN IN"</string>
    <string name="usernameemail">"USER NAME OR EMAIL"</string>
    <string name="password">"PASSWORD"</string>
    <string name="forgotpassword">"FORGOT PASSWORD?"</string>
    <string name="error_msg_vehiclename">"Please enter your vehicle name"</string>
    <string name="error_msg_vehiclenumber">"Please enter your vehicle number"</string>
    <string name="error_msg_vehicletype">"Please choose your vehicle type"</string>
    <string name="error_msg_firstname">"Please enter your first name"</string>
    <string name="error_msg_mobilenumber">"Invalid mobile number"</string>
    <string name="error_msg_lastname">"Please enter your last name"</string>
    <string name="error_msg_email">"Please enter a valid email address"</string>
    <string name="error_msg_phone">"Please enter a valid mobile number"</string>
    <string name="error_msg_password">"Please enter minimum 6 characters"</string>
    <string name="error_msg_address">"Please enter a valid address"</string>
    <string name="error_msg_city">"Please enter a valid city"</string>
    <string name="error_msg_state">"Please enter a valid state"</string>
    <string name="error_msg_post">"Please enter a valid postal code"</string>
    <string name="error_msg_rating">"Please give your rating"</string>
    <string name="camera_permission_description">To capture photos and videos, allow &appname; to access your camera and storage</string>
    <string name="storage_permission_description">To upload image &appname; to access your storage</string>
    <string name="location_permission_description">To request your ride, allow &appname; to access your device location</string>
    <string name="contacts_permission_description">To add emergency contacts, allow &appname; to access  your contacts</string>
    <string name="network_failure">Please check your Internet Connection</string>
    <string name="internal_server_error">Please try again after sometimes.</string>
    <string name="getmobilenumber">Enter your mobile number</string>
    <string name="first">"First Name"</string>
    <string name="last">"Last Name"</string>
    <string name="email">"EMAIL"</string>
    <string name="paypalemail">"PAYPAL EMAIL"</string>
    <string name="address1">"ADDRESS 1"</string>
    <string name="address2">"ADDRESS 2"</string>
    <string name="city">"CITY"</string>
    <string name="state">"STATE"</string>
    <string name="postalcode">"POSTAL CODE"</string>
    <string name="havean_account">"Have an account?"</string>
    <string name="login">Log In</string>
    <string name="resetpasswords">Reset your password</string>
    <string name="riderfeedbacktitle">"RIDER FEEDBACK"</string>
    <string name="signout_msg">"Are you sure you want to sign out?"</string>
    <string name="cancel_s">"Cancel"</string>
    <string name="descreption">"By Proceeding, I agree that &appname; or its representatives may contact me by email, phone or SMS (including by automatic telephone dialing system) at the email address or number I provide,including for marketing purposes. I have read and understand the relevant Driver Privacy Statement. Referral amounts and minimum trip requirements may vary from city to city. &appname; may change any incentive amount or incentive criteria at its sole descretion."</string>
    <string name="register">"REGISTER"</string>
    <string name="vehicle">"VEHICLE DETAILS"</string>
    <string name="vehicle_name">"Vehicle Name / eg: Toyoto Camry, Honda Accord..."</string>
    <string name="vehicle_number">"Vehicle Number / eg: WNF 382"</string>
    <string name="vehicle_type">"Choose your vehicle type"</string>
    <string name="looking">"LOOKING FOR THE RIDER APP?"</string>
    <string name="signupwithrider">"SIGN UP WITH RIDER ACCOUNT"</string>
    <string name="or">"OR"</string>
    <string name="trip_star_5">"YOUR CURRENT RATING"</string>
    <string name="current_rating">"LIFETIME TRIPS"</string>
    <string name="trip_cancel">"5 STARS"</string>
    <string name="request_accepted">"RATED TRIPS"</string>
    <string name="enter4digit">Enter the 4-digit code sent to you at </string>
    <string name="resend">Resend Code</string>
    <string name="otp_mismatch">"OTP code Mismatch."</string>
    <string name="otp_emty">"Please enter the OTP"</string>
    <string name="riderfeedback">"Rider Feedback"</string>
    <string name="checkfeedback">"Check out feedback from riders and learn how to improve"</string>
    <string name="drivingstyle">"Driving Style Dashboard"</string>
    <string name="seeyourdriving">"See your driving style profile after completing more trips"</string>
    <string name="cancel_your_trip">"CANCEL YOUR TRIP"</string>
    <string name="rider_profile">"RIDER PROFILE"</string>
    <string name="waiting_for_payment">"Waiting for payment..."</string>
    <string name="payment_done">"Payment done"</string>
    <string name="paid">"Paid"</string>
    <string name="documents">"DOCUMENTS"</string>
    <string name="doc">"Please upload your documents."</string>
    <string name="personaldoc">"Please upload your personal \ndocuments."</string>
    <string name="vehicledoc_msg">"To drive with &appname; your vehicle must be a mid-size or full-size sedan that comfortably seats 4-8 passengers."</string>
    <string name="driverlicense_back">"Driver's License - (Back/Reverse)"</string>
    <string name="driverlicense_front">"Driver's License - (Front)"</string>
    <string name="motor_insurance">"Motor Insurance Certificate"</string>
    <string name="registeration">"Certificate of Registration"</string>
    <string name="contract_carriage">"Contract Carriage Permit"</string>
    <string name="continues">"CONTINUE"</string>
    <string name="verify">"VERIFY"</string>
    <string name="takephoto">"Take a photo of your"</string>
    <string name="takephoto_msg">"Please make sure we can easily read all the details."</string>
    <string name="taptoadd">"TAP TO ADD"</string>
    <string name="taptochange">"TAP TO CHANGE"</string>
    <string name="camera">Camera</string>
    <string name="camera_roll">Camera roll</string>
    <string name="please_enable_permissions">Please enable app permissions</string>
    <string name="home">"HOME"</string>
    <string name="earnings">"EARNINGS"</string>
    <string name="rating">"RATINGS"</string>
    <string name="account">"ACCOUNT"</string>
    <string name="offline">"Offline"</string>
    <string name="checkstatus">"Check Status"</string>
    <string name="online">"Online"</string>
    <string name="trip_id">"Trip Id : "</string>
    <string name="enroute">"En Route"</string>
    <string name="navigate">"NAVIGATE"</string>
    <string name="pickup">"Pickup"</string>
    <string name="pick_up">"PICK UP"</string>
    <string name="dropoff">"DROP OFF"</string>
    <string name="contact_C">"CONTACT"</string>
    <string name="call">"CALL"</string>
    <string name="callsonly">"CALLS ONLY"</string>
    <string name="cancel">"CANCEL"</string>
    <string name="minute">"MINUTE"</string>
    <string name="minutes">"MINUTES"</string>
    <string name="help">"Help"</string>
    <string name="edit">"EDIT"</string>
    <string name="document_s">"Documents"</string>
    <string name="about">"About"</string>
    <string name="signout">"Sign Out"</string>
    <string name="notrip">"You have no trip"</string>
    <string name="currency">"₹ "</string>
    <string name="tripsdetails">"TRIP DETAIL"</string>
    <string name="triphistory">"TRIP HISTORY"</string>
    <string name="trip_payment">"Trips &amp; Payments"</string>
    <string name="pasttrip">"PAST TRIPS"</string>
    <string name="todaytrip">"TODAY'S TRIPS"</string>
    <string name="tripearnings">"TRIP EARNINGS"</string>
    <string name="fare">"Base Fare"</string>
    <string name="uberfee">"Access Fee"</string>
    <string name="distancefare">"Distance Fare"</string>
    <string name="timefare">"Time Fare"</string>
    <string name="estimatedpayout">"Total Payout"</string>
    <string name="totalpayout">"Total Payout"</string>
    <string name="totalamount">"Total Trip Fare"</string>
    <string name="adminamount">"Admin's Amount"</string>
    <string name="oweamount">"Owe Amount"</string>
    <string name="driverpayout">"Driver Payout"</string>
    <string name="cashcollectable">"Collectable Cash"</string>
    <string name="cash_trip">"Cash Trip"</string>
    <string name="cashcollected">"Cash Collected"</string>
    <string name="waitforrider">"Waiting for rider confirmation"</string>
    <string name="duration">"DURATION"</string>
    <string name="distance">"DISTANCE"</string>
    <string name="thisweek">"THIS WEEK"</string>
    <string name="thisweek_empty">"You have not driven this week"</string>
    <string name="total_payout">"TOTAL PAYOUT"</string>
    <string name="last_trip">"Last trip: "</string>
    <string name="pay_statemet">"Pay Statements"</string>
    <string name="payment">"Payment"</string>
    <string name="payout">"Payout"</string>
    <string name="addpayout">Add PayPal Payout</string>
    <string name="most_recent">"Most recent payout: "</string>
    <string name="addpayment_msg">"To add a new payout. Create a email for your &appname_driver;
        account. "</string>
    <string name="begin_trip">"Swipe to Begin Trip"</string>
    <string name="confirm_arrived">"SWIPE TO CONFIRM YOU'VE ARRIVED"</string>
    <string name="end_trip">"Swipe to End Trip"</string>
    <string name="begin_trip_text">"Begin Trip"</string>
    <string name="confirm_arrived_text">"SWIPE TO CONFIRM YOU'VE ARRIVED"</string>
    <string name="end_trip_text">"Swipe to End Trip"</string>
    <string name="Rating">Rating</string>
    <string name="completed">Completed</string>
    <string name="Cancelled">Cancelled</string>
    <string name="scheduled">"Scheduled"</string>
    <string name="paystatement">"PAY STATEMENTS"</string>
    <string name="weeklystatement">"WEEKLY STATEMENT"</string>
    <string name="timeonline">"TIME ONLINE"</string>
    <string name="completedtrips">"COMPLETED TRIPS"</string>
    <string name="dailyearning">"DAILY EARNINGS"</string>
    <string name="bankdeposit">"Bank Deposit"</string>
    <string name="totaluberearning">"Total &appname; Earnings"</string>
    <string name="riderfaresearn">"Rider fares earned and kept."</string>
    <string name="Interneterror">No internet connection</string>
    <string name="no_connection">No internet connection</string>
    <string name="go_online">GO ONLINE</string>
    <string name="font_UBERBook" translatable="false">"ClanProForUBER-Book"</string>
    <string name="font_UBERMedium" translatable="false">"ClanProForUBER-Medium"</string>
    <string name="font_UBERNews" translatable="false">"ClanProForUBER-News"</string>
    <string name="font_UberClone" translatable="false">"uber-clone-mobile"</string>
    <string-array name="language">
        <item>English</item>
        <item>فارسی</item>
        <item>Español</item>
        <item>عربى</item>
    </string-array>
    <string name="layout_direction">0</string>
    <string name="next">Next</string>
    <string name="message">Message</string>
</resources>