<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.trioangle.goferdriver.signinsignup.DocumentUploadActivity">

    <RelativeLayout
        android:id="@+id/driverlicence_front_lay"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:scaleX=".6"
            android:scaleY=".6"
            android:src="@drawable/gobackleftarrow"
            android:tint="@color/white" />

        <com.trioangle.goferdriver.custompalette.FontTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivBack"
            android:text="@string/documents"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:fontname="@string/font_UBERBook" />
    </RelativeLayout>


    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/fontTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/takephoto"
        android:textColor="@color/textblack"
        android:textSize="18sp"
        app:fontname="@string/font_UBERBook" />

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/tvDocTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/contract_carriage"
        android:textColor="@color/textblack"
        android:textSize="20sp"
        app:fontname="@string/font_UBERNews" />

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/takephoto_msg"
        android:textColor="@color/textblack"
        android:textSize="14sp"
        app:fontname="@string/font_UBERBook" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/v_doc" />

    <RelativeLayout
        android:id="@+id/rltTapToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/camera" />

        <com.trioangle.goferdriver.custompalette.FontTextView
            android:id="@+id/tvTapToAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/ivCamera"
            android:text="@string/taptoadd"
            android:textColor="@color/bluetext"
            android:textSize="18sp"
            app:fontname="@string/font_UBERMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rltNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:visibility="visible"
        android:padding="20dp">

        <com.trioangle.goferdriver.custompalette.FontTextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/next"
            android:textColor="@color/bluetext"
            android:textSize="18sp"
            app:fontname="@string/font_UBERMedium" />
    </RelativeLayout>
</LinearLayout>
