<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="@string/layout_direction"
    android:orientation="vertical">

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/listempty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/notrip"
        android:textAlignment="center"
        android:textColor="@color/textblack"
        android:textSize="15dp"
        android:visibility="gone"
        app:fontname="@string/font_UBERMedium" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/current_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical" />


</LinearLayout>