<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signin_signup_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:layoutDirection="@string/layout_direction"
    tools:context="com.trioangle.goferdriver.signinsignup.SigninSignupHomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout1">

        <com.trioangle.goferdriver.custompalette.FontTextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/applogo"
            android:paddingBottom="60dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="60dp"
            android:textColor="@color/colorblack"
            android:textSize="25sp"
            app:fontname="@string/font_UBERMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/signinup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.trioangle.goferdriver.custompalette.FontButton
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/d_bordor"
                android:text="@string/signin"
                android:textColor="@color/colorblack"
                android:textSize="15sp"
                app:fontname="@string/font_UBERMedium" />

            <com.trioangle.goferdriver.custompalette.FontButton
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/d_background_black"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:fontname="@string/font_UBERMedium" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signinup"
            android:layout_marginTop="20dp"
            android:background="@drawable/d_topbordor"
            android:paddingTop="10dp">

            <com.trioangle.goferdriver.custompalette.FontTextView
                android:id="@+id/looking"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/looking"
                android:textAlignment="center"
                android:textColor="@color/colorblack"
                app:fontname="@string/font_UBERNews" />

            <TextView
                android:id="@+id/languagetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/language"
                android:textColor="@color/colorgreencray"
                android:textSize="16sp"
                android:transitionName="social" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/languagetext"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="10dp"
                android:text="English"
                android:textColor="@color/textgray"
                android:textSize="16sp"
                android:transitionName="social"

                />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
