<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/d_buttomboarder"
    android:layoutDirection="@string/layout_direction"
    android:paddingBottom="10dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp">

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/dailytrip"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="start|center_vertical"
        android:textColor="@color/colorblack"
        android:textSize="16sp"
        app:fontname="@string/font_UBERNews" />

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/fontTextView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:gravity="end|center_vertical"
        android:text="q"
        android:textSize="14dp"
        app:fontname="@string/font_UberClone" />

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/dailyamount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/fontTextView3"
        android:gravity="end|center_vertical"
        android:paddingEnd="10dp"
        android:textColor="@color/cb_textColor"
        android:textSize="16sp"
        app:fontname="@string/font_UBERNews" />

</RelativeLayout>