<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/basrfarelayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/rltprice"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/faretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/fare"
        android:layout_alignParentStart="true"
        android:textAlignment="textStart"
        android:layout_marginEnd="140dp"
        android:textColor="@color/textblack"
        android:textSize="18sp"
        app:fontname="@string/font_UBERNews" />

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:layout_width="wrap_content"
        android:id="@+id/baseview"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/faretxt"
        android:paddingStart="5dp"
        android:text="w"
        android:textAlignment="center"
        android:textColor="@color/light_text"
        android:textSize="18sp"
        app:fontname="@string/font_UberClone" />

    <com.trioangle.goferdriver.custompalette.FontTextView
        android:id="@+id/fareAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingEnd="20dp"
        android:text="100"
        android:textColor="@color/textblack"
        android:textSize="18sp"
        app:fontname="@string/font_UBERNews" />

</RelativeLayout></RelativeLayout>